--- a/site.html
+++ b/site.html
@@ -13,10 +13,10 @@
             <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
         </section>
         <section id="redes">
-            <a href="" target="tela"><img src="imagens/logo-home.jpg" alt=""></a><br>                                   
-            <a href="" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
-            <a href="" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
-            <a href="" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a><br>                                   
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="x.html" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a>
         </section>
     </main>
 </body>
